# opencodex

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LOCAL_UPGRADE.md  MAINTAINERS.md  README.ja.md  README.ko.md  README.md  README.ru.md  README.zh-CN.md  design-qa.md  package.json
.github/: CODEOWNERS  release.yml
devlog/: 31_mcp_tool_forwarding.md  43_models_always_latest_routing_fixes.md
docs/: codex-app-model-catalog.md  codex-path-investigation.md  github-copilot-app.md  rate-limiter.md
docs-site/: astro.config.mjs  package.json
go/: go.mod  go.sum
gui/: .env.example  AGENTS.md  README.md  doctor.config.json  eslint.config.js  package.json  vite.config.ts
menubar/: README.md  index.html  package-lock.json  package.json  vite.config.ts
menubar/src-tauri/: Cargo.toml  tauri.conf.json
menubar/src-tauri/capabilities/: default.json
menubar/src-tauri/src/: api.rs  discover.rs  keychain.rs  lib.rs  main.rs  tray.rs
scripts/: build-macos-app.sh  doctor-gui-if-changed.ts  generate-jawcode-metadata.ts  install.ps1  install.sh  local-update.sh  local-update.ts  memory-stress-harness.ts  ocx-restart.sh  openai-provider-option-evidence-scan.ts  openai-provider-option-final-gates.ts  openai-provider-option-runtime-child.ts  openai-provider-option-runtime-smoke.ts  package-macos-release.sh  pre-push.sh  privacy-scan.ts  release.ts  screenshot-workspace-modals.mjs  setup-hooks.ts
src/: bridge.ts  cli.ts  codex-account-store.ts  codex-auth-api.ts  codex-auth-context.ts  codex-catalog.ts  codex-history-provider.ts  codex-inject.ts  codex-paths.ts  codex-quota.ts  (+26 more)
(+1443 files in other folders)
