[package]
name = "opencodex-menubar"
version = "0.1.0"
edition = "2021"
description = "macOS menu bar tool for opencodex proxy monitoring"

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
security-framework = "3"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
libc = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "opencodex_menubar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
